# furry-dollop

./: .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  README.md  pyproject.toml
nabirds/: .pre-commit-config.yaml  README  nabirds27.py  nabirds37.py
notebooks/: bird_detective.ipynb
