[project]
name = "furry-dollop"
version = "0.1.0"
description = "Bird identifier"
authors = [
  "William Skertic <wskertic@gmail.com>"
]
license = "GNU AGPLv3"
readme = "README"
python = "^3.6"
homepage = "https://github.com/wskertic/furry-dollop"
repository = "https://github.com/wskertic/furry-dollop"
documentation = "https://github.com/wskertic/furry-dollop"

keywords = ["nabirds"]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | \.docs
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/