[project]
name = "furry-dollop"
version = "0.1.0"
description = "Bird identifier"
authors = [
  "William Skertic <wskertic@gmail.com>"
]
license = "GNU AGPLv3"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/wskertic/furry-dollop"
repository = "https://github.com/wskertic/furry-dollop"
documentation = "https://github.com/wskertic/furry-dollop"

keywords = ["nabirds"]

# Requirements
# [dependencies]
# boto3 = "^version"

[dev-dependencies]
black = { version = "^19.3b0", python = "^3.6" }
pre-commit = { version = "^2.2.0" }

# [scripts]
# poetry = "infer_pyproject.cli:main"

# [build-system]

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | \.docs
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/